Reformat to remove extra spaces

--- a/examples/Nested_Angluar_Grid.ipynb
+++ b/examples/Nested_Angluar_Grid.ipynb
@@ -83,8 +83,7 @@
     "        (0, -a, b), (0, a, b), (0, -a, -b), (0, a, -b),\n",
     "        (b, 0, -a), (b, 0, a), (-b, 0, -a), (-b, 0, a)\n",
     "    ]\n",
-    "    return np.array(vertices)\n",
-    "\n"
+    "    return np.array(vertices)"
    ],
    "id": "1020af5f90c5194f"
   },
@@ -161,8 +160,7 @@
     "    for _ in range(subdivisions):\n",
     "        vertices, faces = subdivide(vertices, faces)\n",
     "\n",
-    "    return vertices\n",
-    "\n"
+    "    return vertices"
    ],
    "id": "eb19825304594269"
   },
@@ -403,8 +401,7 @@
     "    dens_lap = promol.laplacian(points)\n",
     "    dens_gradgrad = dens_grad_grad(points)\n",
     "    vx = v_x(dens, dens_grad_norm, dens_lap, dens_grad, dens_gradgrad)\n",
-    "    return vx\n",
-    "\n"
+    "    return vx"
    ],
    "id": "b09c0d97a2722fda"
   },
@@ -559,7 +556,7 @@
     "# Define the atom (neon at origin)\n",
     "atcoords = np.array([[0, 0, 0]])\n",
     "atnums = np.array([10])  # Atomic number 10 is neon\n",
-    "promol = make_promolecule(atnums=atnums, coords=atcoords, dataset='slater')\n"
+    "promol = make_promolecule(atnums=atnums, coords=atcoords, dataset='slater')"
    ],
    "id": "4d56acb27411b2d"
   },
@@ -584,7 +581,7 @@
     "# Create adaptive grids for different properties\n",
     "grid_e, weights_e, icosphere_orders_e = adaptative_grid(promol, \"num_electrons\")\n",
     "grid_x, weights_x, icosphere_orders_x = adaptative_grid(promol, \"energy\")\n",
-    "grid_v, weights_v, icosphere_orders_v = adaptative_grid(promol, \"potential\")\n"
+    "grid_v, weights_v, icosphere_orders_v = adaptative_grid(promol, \"potential\")"
    ],
    "id": "3fad755aa71b1bfa"
   }
