Added tol to arguments and changed match to if statements

--- a/examples/Nested_Angluar_Grid.ipynb
+++ b/examples/Nested_Angluar_Grid.ipynb
@@ -422,31 +422,38 @@
    "id": "7a002d79073cc30c"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-03T18:26:21.555273Z",
+     "start_time": "2025-04-03T18:26:21.544036Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Function to create an adaptive grid for numerical integration\n",
-    "def adaptative_grid(promol, variable):\n",
+    "def adaptative_grid(promol, variable, tol=None):\n",
     "    # Select the appropriate calculation function and tolerance based on the variable\n",
-    "    match variable:\n",
-    "        case \"num_electrons\":\n",
-    "            calc_variable = calc_num_e\n",
-    "            tol = 1e-14\n",
-    "        case \"energy\":\n",
-    "            calc_variable = calc_e_x\n",
+    "    if variable == \"num_electrons\":\n",
+    "        calc_variable = calc_num_e\n",
+    "        if tol is None:\n",
     "            tol = 1e-15\n",
-    "        case \"potential\":\n",
-    "            calc_variable = calc_v_x\n",
-    "            tol = 1e-4\n",
-    "        case _:\n",
-    "            raise ValueError(\n",
-    "                \"Variable can only be one of 'num_electrons', 'energy' or 'potential'.\")\n",
+    "    elif variable == \"energy\":\n",
+    "        calc_variable = calc_e_x\n",
+    "        if tol is None:\n",
+    "            tol = 1e-15\n",
+    "    elif variable == \"potential\":\n",
+    "        calc_variable = calc_v_x\n",
+    "        if tol is None:\n",
+    "            tol = 1e-5\n",
+    "    else:\n",
+    "        raise ValueError(\n",
+    "            \"Variable can only be one of 'num_electrons', 'energy' or 'potential'.\")\n",
+    "\n",
+    "    print(f'Calculating {variable}...')\n",
     "\n",
     "    # Generate radial grid\n",
     "    oned_grid = Trapezoidal(npoints=100)\n",
-    "    radial_grid = LinearFiniteRTransform(0.0, 10).transform_1d_grid(oned_grid)\n",
+    "    radial_grid = LinearFiniteRTransform(1e-8, 10).transform_1d_grid(oned_grid)\n",
     "\n",
     "    # Generate initial angular grid and compute the weights\n",
     "    points_sphere, w_sphere = angular_grid_from_icosphere(0)\n",
@@ -473,13 +480,15 @@
     "                                          preset='ultrafine',\n",
     "                                          rgrid=radial_grid,\n",
     "                                          center=atcoord)\n",
-    "    dens_test = promol.density(reference_grid.points)\n",
     "    val_ref_integrand = calc_variable(promol, reference_grid.points)\n",
     "    val_ref = np.nansum(val_ref_integrand * reference_grid.weights)\n",
     "    print(f'{variable} for reference grid = {val_ref:.6f}\\n')\n",
     "\n",
     "    # If initial grid is already accurate enough, return it\n",
     "    if abs(val_ref - val_0) < tol:\n",
+    "        print(f'{variable} for initial grid = {val_0:.6f}')\n",
+    "        print(f'Difference = {abs(val_ref - val_0):.3e}')\n",
+    "        print(\"Order 0 grid gives results of similar accuracy to the reference grid.\")\n",
     "        return grid, weights, icosphere_orders\n",
     "\n",
     "    radial_weights = radial_grid.weights * radial_grid.points ** 2\n",
@@ -529,7 +538,9 @@
     "\n",
     "    return grid, weights, icosphere_orders"
    ],
-   "id": "629931bb1aea49bb"
+   "id": "629931bb1aea49bb",
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "metadata": {},
