--- a/examples/Nested_Angluar_Grid.ipynb
+++ b/examples/Nested_Angluar_Grid.ipynb
@@ -592,9 +592,241 @@
     "# Create adaptive grids for different properties\n",
     "grid_e, weights_e, icosphere_orders_e = adaptative_grid(promol, \"num_electrons\")\n",
     "grid_x, weights_x, icosphere_orders_x = adaptative_grid(promol, \"energy\")\n",
-    "grid_v, weights_v, icosphere_orders_v = adaptative_grid(promol, \"potential\")"
+    "grid_v, weights_v, icosphere_orders_v = adaptative_grid(promol, \"potential\")\n",
+    "\n",
+    "grid_e_16, weights_e_16, icosphere_orders_e_16 = adaptative_grid(promol, \"num_electrons\", tol=1e-16)\n",
+    "grid_x_16, weights_x_16, icosphere_orders_x_16 = adaptative_grid(promol, \"energy\", tol=1e-16)"
    ],
    "id": "3fad755aa71b1bfa"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Comparison between grids",
+   "id": "91b03e55d7d638a3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Import plotting libraries",
+   "id": "a82fd77a87539b75"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import MultipleLocator"
+   ],
+   "id": "d6f788d497afcac2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Comparison between adaptative grids",
+   "id": "84b7aad00020a2bf"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "First, we compare the icosphere order for every radial point.",
+   "id": "146d0521a69e2fc2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "oned_grid = Trapezoidal(npoints=100)\n",
+    "radial_grid = LinearFiniteRTransform(0.0, 10).transform_1d_grid(oned_grid)\n",
+    "x = radial_grid.points\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(x, icosphere_orders_v, label='Exchange Potential')\n",
+    "plt.plot(x, icosphere_orders_e, label='Electron Density ($tol=10^{-15}$)', linestyle=(2.5, (5, 3)), linewidth=2)\n",
+    "plt.plot(x, icosphere_orders_x, label='Exchange Energy ($tol=10^{-15}$)', linestyle=(0, (1, 3)), linewidth=4)\n",
+    "plt.plot(x, icosphere_orders_e_16, label='Electron Density ($tol=10^{-16}$)', linestyle=(2.5, (5, 3)), linewidth=2)\n",
+    "plt.plot(x, icosphere_orders_x_16, label='Exchange Energy ($tol=10^{-16}$)', linestyle=(0, (1, 3)), linewidth=4)\n",
+    "\n",
+    "ax = plt.gca()\n",
+    "ax.yaxis.set_major_locator(plt.MaxNLocator(integer=True))\n",
+    "ax.xaxis.set_minor_locator(MultipleLocator(0.5))\n",
+    "\n",
+    "plt.xlabel('Radial Distance [a.u.]')\n",
+    "plt.ylabel('Icosphere Order for Angular Grid')\n",
+    "plt.title('Comparison of Icosphere Orders for Different Properties')\n",
+    "plt.legend()\n",
+    "plt.grid()"
+   ],
+   "id": "1b9268146426c977"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Then, we compare the number of points in the icosphere corresponding to each radial point.",
+   "id": "bc9105761c0a7457"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "ICOSPHERE_NPOINTS = {\n",
+    "    0: 12,\n",
+    "    1: 42,\n",
+    "    2: 162,\n",
+    "    3: 642,\n",
+    "    4: 2562,\n",
+    "    5: 10242,\n",
+    "    6: 40962,\n",
+    "    7: 163842,\n",
+    "    8: 655362,\n",
+    "    9: 2621442,\n",
+    "    10: 10485762,\n",
+    "}\n",
+    "y_v = [ICOSPHERE_NPOINTS[o] for o in icosphere_orders_v]\n",
+    "y_e = [ICOSPHERE_NPOINTS[o] for o in icosphere_orders_e]\n",
+    "y_x = [ICOSPHERE_NPOINTS[o] for o in icosphere_orders_x]\n",
+    "y_e_16 = [ICOSPHERE_NPOINTS[o] for o in icosphere_orders_e_16]\n",
+    "y_x_16 = [ICOSPHERE_NPOINTS[o] for o in icosphere_orders_x_16]\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(x, y_v, label='Exchange Potential')\n",
+    "plt.plot(x, y_e, label='Electron Density ($tol=10^{-15}$)', linestyle=(2.5, (5, 3)), linewidth=2)\n",
+    "plt.plot(x, y_x, label='Exchange Energy ($tol=10^{-15}$)', linestyle=(0, (1, 3)), linewidth=4)\n",
+    "plt.plot(x, y_e_16, label='Electron Density ($tol=10^{-16}$)', linestyle=(2.5, (5, 3)), linewidth=2)\n",
+    "plt.plot(x, y_x_16, label='Exchange Energy ($tol=10^{-16}$)', linestyle=(0, (1, 3)), linewidth=4)\n",
+    "\n",
+    "plt.yscale('log')\n",
+    "ax = plt.gca()\n",
+    "ax.xaxis.set_minor_locator(MultipleLocator(0.5))\n",
+    "max_val = max(max(icosphere_orders_e), max(icosphere_orders_v), max(icosphere_orders_x))\n",
+    "y_ticks = [ICOSPHERE_NPOINTS[i] for i in range(max_val + 1)]\n",
+    "ax.yaxis.set_ticks(y_ticks)\n",
+    "ax.yaxis.set_ticklabels(y_ticks)\n",
+    "\n",
+    "plt.xlabel('Radial Distance [a.u.]')\n",
+    "plt.ylabel('log Number of Angular Points')\n",
+    "plt.title('Comparison of Number of Points for Each Grid')\n",
+    "plt.legend()\n",
+    "plt.grid()"
+   ],
+   "id": "119e8dc0978cca20"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Comparison of adaptative grids with presets included in theochem/grid",
+   "id": "a0b8465be3d62af"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "presets = ['coarse', 'medium', 'fine', 'veryfine', 'ultrafine', 'insane']\n",
+    "radius_count_list = []\n",
+    "grid_presets = {}\n",
+    "\n",
+    "atnum = promol.atoms[0]._data.atnum\n",
+    "atcoord = promol.coords[0]\n",
+    "for preset in presets:\n",
+    "    reference_grid = AtomGrid.from_preset(atnum=atnum,\n",
+    "                                          preset=preset,\n",
+    "                                          rgrid=radial_grid,\n",
+    "                                          center=atcoord)\n",
+    "    grid_presets[preset] = reference_grid\n",
+    "    grid_norm = np.linalg.norm(reference_grid.points, axis=1)\n",
+    "    norm_list = np.round(grid_norm* 10**5)\n",
+    "    radius, counts = np.unique(norm_list, axis=0, return_counts=True)\n",
+    "    radius /= 10**5\n",
+    "    radius_count_list.append((radius, counts))\n"
+   ],
+   "id": "d6619d8c0cdb7ae4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "We compare the distribution of the number of points in the sphere corresponding to each radial point.",
+   "id": "182b616baabbcb14"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# prompt: genera una gráfica que compare los arrays contenidos en count\n",
+    "\n",
+    "# Assuming 'counts' and 'presets' are defined from the previous code\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "\n",
+    "for i, (radius, counts) in enumerate(radius_count_list):\n",
+    "    plt.plot(radius, counts, label=presets[i])\n",
+    "\n",
+    "plt.plot(x, y_v, label='Exchange Potential', linestyle=':')\n",
+    "plt.plot(x, y_e, label='Electron Density ($tol=10^{-15}$)', linestyle=(2.5, (5, 3)), linewidth=2)\n",
+    "plt.plot(x, y_x, label='Exchange Energy ($tol=10^{-15}$)', linestyle=(0, (1, 3)), linewidth=4)\n",
+    "plt.plot(x, y_e_16, label='Electron Density ($tol=10^{-16}$)', linestyle=(2.5, (5, 3)), linewidth=2)\n",
+    "plt.plot(x, y_x_16, label='Exchange Energy ($tol=10^{-16}$)', linestyle=(0, (1, 3)), linewidth=4)\n",
+    "\n",
+    "plt.yscale('log')\n",
+    "ax = plt.gca()\n",
+    "ax.xaxis.set_minor_locator(MultipleLocator(0.5))\n",
+    "\n",
+    "y_ticks = [12, 42] + [max(counts) for radius, counts in radius_count_list] + [2562]\n",
+    "ax.yaxis.set_ticks(y_ticks)\n",
+    "ax.yaxis.set_ticklabels(y_ticks)\n",
+    "\n",
+    "plt.xlabel('Radial Distance [a.u.]')\n",
+    "plt.ylabel('Number of Grid Points')\n",
+    "plt.title('Comparison of Grid Point Distribution for Different Presets and Adaptative Grids')\n",
+    "plt.legend()\n",
+    "plt.grid()"
+   ],
+   "id": "ee7db1ef1db29729"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Finally, we compare the total number of points in each grid.",
+   "id": "55027be659cc6d5d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "\n",
+    "grid_name = ['Exchange Potential', 'Electron Density ($tol=10^{-15}$)',\n",
+    "             'Exchange Energy ($tol=10^{-15}$)'] + ['Electron Density ($tol=10^{-16}$)',\n",
+    "                                                    'Exchange Energy ($tol=10^{-16}$)'] + presets\n",
+    "\n",
+    "num_points = [sum(y_v), sum(y_e), sum(y_x)] + [sum(y_e_16), sum(y_x_16)]\n",
+    "for radius, counts in radius_count_list:\n",
+    "    num_points.append(sum(counts))\n",
+    "\n",
+    "bar_colors = ['tab:blue'] * 3 + ['tab:green'] * 2 + ['tab:red'] * 6\n",
+    "\n",
+    "h = plt.bar(grid_name, num_points, color=bar_colors)\n",
+    "\n",
+    "plt.plot((-0.4,10.4), (sum(y_e_16), sum(y_e_16)), 'k', linestyle=':')\n",
+    "\n",
+    "plt.bar_label(h, padding=2, fmt='{:,.0f}')\n",
+    "\n",
+    "plt.xticks(rotation=45, ha='right')\n",
+    "plt.ylabel('Number of Grid Points')\n",
+    "plt.title('Comparison of Total Grid Points for Different Grids')"
+   ],
+   "id": "6344575427257981"
   }
  ],
  "metadata": {
